=head1 NAME

DBI::Changes - List of significant changes to the DBI

(As of $Date: 2007-06-18 15:19:45 +0100 (Mon, 18 Jun 2007) $ $Revision: 9659 $)

=cut

Assorted TODO notes:

Protect trace_msg from SIGPIPE?

Add count of identical frozen_request (plus sum(results size)) to Gofer status
Highlight those seen before.

Move post-request cleanup into separate method and enable hooks so
    it can be done after the response has been sent

Gofer request flags:
    return current executor stats as an attribute - handy for tests
    only fetch one result set - handy for Sybase/MSSQL users
    will accept streamed resultsets
Add attr-passthru to prepare()? ie for gofer cache control & ReadOnly
Terminology for client and server ends
Document user/passwd issues at the various levels of the gofer stack
Policy's from pod
Policy for dbh attr FETCH (ie example_driver_path)
    or piggyback on skip_connect_check
    could also remember which attr have been returned to us
    so not bother FETCHing them (unless pedantic)
Call method on transport failure so transport can cleanup/reset it it wants

prepare(...,{ Err=>\my $isolated_err, ...})
Move _new_sth to DBI::db::_new_sth (leave alias) and implement in C
Implement FETCH_many() in C
Or call _new_child and move to DBI::common?
Add trace modules that just records the last N trace messages into an array
and prepends them to any error message.

=head2 Changes in DBI 1.57 (svn rev 9639),  13th June 2007

  Note: this release includes a change to the DBI::hash() function which will
  now produce different values than before *if* your perl was built with 64-bit
  'int' type (i.e. "perl -V:intsize" says intsize='4').  It's relatively rare
  for perl to be configured that way, even on 64-bit systems.

  Fixed XS versions of select*_*() methods to call execute()
    fetch() etc., with inner handle instead of outer.
  Fixed execute_for_fetch() to not cache errstr values
    thanks to Bart Degryse.