@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBI
-version:      1.57
+version:      1.58
 version_from: DBI.pm
 installdirs:  site
 requires:
@@ -11,4 +11,4 @@ requires:
     Test::Simple:                  0.4
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30
